# mocap_optitrack

./: CMakeLists.txt  CrashFix.md  README.md
config/: mocap.yaml
include/mocap_optitrack/: mocap_config.h  mocap_datapackets.h
launch/: mocap.launch
src/: mocap_config.cpp  mocap_datapackets.cpp  mocap_node.cpp  object_transform.cpp
